list of messages

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -3,11 +3,7 @@
 		
 		
 		<!-- Content -->
-		<View class="containerHome" id="containerHome" >
-			
-			
-		
-		</View>
+		<View class="containerHome" id="containerHome" ></View>
 
 		
 	</View>
