--- a/app/views/listMessages.xml
+++ b/app/views/listMessages.xml
@@ -3,10 +3,7 @@
 		
 		
 		<!-- Content -->
-		<TableView id="tableView_Bono" class="tableList">
-			
-	    	
-	   </TableView>
+		<TableView id="tableView_Bono" class="tableList"> </TableView>
 
 		
 	</View>
